shorter text for mobile phones

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<span class="icon-bar"></span>
 					  </button>
 					  <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-apple"></span> Rottweiler's Tools</a>
-					  <p class="navbar-text">Download compiled tools</p>
+					  <p class="navbar-text">Compiled tools</p>
 					</div>
 
 				  </div><!-- /.container-fluid -->
