--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<div class="row">
 				<span id="result" class="alert alert-info"></span>
 			</div>
-			
-			<form id="board-calculator" class="form row">
+			<div class="row">
+			<form id="board-calculator" class="form">
 				
 				<label for="board-length">Current length</label>
 				<input id="board-length" class="form-control" type="number" value="96" />
@@ -28,6 +28,7 @@
 				
 				<input class="form-control" type="submit" />
 			</form>
+			</div>
 		</div>
 
 		
